--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "mongoose": "^6.0.8",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
+    "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "password": "^0.1.1",
     "pug": "2.0.0-beta11"
   }
 }
